# solana-transfer-extraction

./: .gitignore  Cargo.toml  README.md  substreams.yaml
proto/: mydata.proto
src/: lib.rs
src/pb/: .last_generated_hash  mod.rs  mydata.rs
